# modpath

./: .gitignore  .travis-ci.yml  AUTHORS  ChangeLog  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
modpath/: __init__.py  __main__.py  cli.py  dtypes.py  errors.py  funcs.py  modpath.py
tests/: test_basics.py
