[metadata]
name = modpath
author = Michael McDermott
author-email = michaelmcdermott11@gmail.com
summary = Modify paths. A tool to manipulate paths, extensions, directories, and structured filenames
description-file = README.md
description-content-type = text/markdown; charset=UTF-8
home-page = https://github.com/xkortex/modpath
license = MIT
classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: POSIX
    Programming Language :: Python
keywords =
    path
    file
    io

[files]
packages =
    modpath

[entry_points]
console_scripts =
    modpath = modpath.cli:modpath_cli


