[metadata]
name = modpath
author = Michael McDermott
author-email = michaelmcdermott11@gmail.com
summary = Modify paths. A tool to manipulate paths, extensions, directories, and structured filenames
description-file = README.md
description-content-type = text/markdown; charset=UTF-8
home-page = https://github.com/xkortex/modpath
license = MIT
classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: POSIX
    Programming Language :: Python
keywords =
    path
    file
    io

[files]
packages =
    modpath

[entry_points]
console_scripts =
    modpath = modpath.cli:modpath_cli

; commented lines are tricky ones!
[mypy]
show_error_codes = True
follow_imports = silent
strict_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
;disallow_any_generics = True
check_untyped_defs = True
no_implicit_reexport = True
warn_unused_configs = True
;disallow_subclassing_any = True
;disallow_incomplete_defs = True
disallow_untyped_decorators = True
;disallow_untyped_calls = True

# for strict mypy: (this is the tricky one :-))
;disallow_untyped_defs = True
